name:                libpng-safe
version:             0.0.1
-- synopsis:            
-- description:         
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  c-sources:           cbits/libpng-safe.c
  exposed-modules:     Png
  -- other-modules:       
  build-depends:       base ==4.6.*
  extra-libraries:     png